--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -233,7 +233,8 @@ img[alt="African Cuisine"]:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(135deg, #2D5016 0%, #4A7C59 50%, #FF6B35 100%);
+    background-color: #fff;
+
     /* Gradient background */
     display: flex;
     justify-content: center;
