--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -233,7 +233,7 @@ img[alt="African Cuisine"]:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-color: var(--color-light-green);
 
     /* Gradient background */
     display: flex;
